[workspace]
resolver = "2"

members = [
    "aws-mls",
    "aws-mls-core",
    "aws-mls-ffi",
    "aws-mls-identity-x509",
    "aws-mls/fuzz",
    "aws-mls/test_harness_integration",
    "aws-mls-crypto-openssl",
    "aws-mls-crypto-rustcrypto",
    "aws-mls-crypto-awslc",
    "aws-mls-crypto-hpke",
    "aws-mls-provider-sqlite",
    "aws-mls-codec",
    "aws-mls-codec-derive"
]

default-members = [
    "aws-mls",
    "aws-mls-core",
    "aws-mls-ffi",
    "aws-mls-identity-x509",
    "aws-mls-crypto-hpke",
    "aws-mls-crypto-openssl",
    "aws-mls-crypto-rustcrypto",
    "aws-mls-crypto-awslc",
    "aws-mls-provider-sqlite",
    "aws-mls-codec"
]

[profile.release-mini]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
strip = "debuginfo"
debug = 0
debug-assertions = false
overflow-checks = false
