[workspace]
resolver = "2"

members = [
    "mls-rs",
    "mls-rs-core",
    "mls-rs-ffi",
    "mls-rs-identity-x509",
    "mls-rs/fuzz",
    "mls-rs/test_harness_integration",
    "mls-rs-crypto-openssl",
    "mls-rs-crypto-rustcrypto",
    "mls-rs-crypto-awslc",
    "mls-rs-crypto-hpke",
    "mls-rs-provider-sqlite",
    "mls-rs-codec",
    "mls-rs-codec-derive"
]

default-members = [
    "mls-rs",
    "mls-rs-core",
    "mls-rs-ffi",
    "mls-rs-identity-x509",
    "mls-rs-crypto-hpke",
    "mls-rs-crypto-openssl",
    "mls-rs-crypto-rustcrypto",
    "mls-rs-crypto-awslc",
    "mls-rs-provider-sqlite",
    "mls-rs-codec"
]

[profile.release-mini]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
strip = "debuginfo"
debug = 0
debug-assertions = false
overflow-checks = false
