[workspace]
resolver = "2"

members = [
    "mls-rs",
    "mls-rs-core",
    "mls-rs-ffi",
    "mls-rs-identity-x509",
    "mls-rs/test_harness_integration",
    "mls-rs-crypto-cryptokit",
    "mls-rs-crypto-openssl",
    "mls-rs-crypto-rustcrypto",
    "mls-rs-crypto-awslc",
    "mls-rs-crypto-webcrypto",
    "mls-rs-crypto-hpke",
    "mls-rs-provider-sqlite",
    "mls-rs-codec",
    "mls-rs-codec-derive",
    "mls-rs-uniffi",
    "mls-rs-uniffi/uniffi-bindgen",
]

default-members = [
    "mls-rs",
    "mls-rs-core",
    "mls-rs-ffi",
    "mls-rs-identity-x509",
    "mls-rs-crypto-hpke",
    "mls-rs-crypto-openssl",
    "mls-rs-crypto-rustcrypto",
    "mls-rs-crypto-awslc",
    "mls-rs-crypto-webcrypto",
    "mls-rs-provider-sqlite",
    "mls-rs-codec",
    "mls-rs-uniffi",
]
