[package]
name = "aws-mls-core"
version = "0.6.0"
edition = "2021"

[features]
default = ["std", "rfc_compliant"]
arbitrary = ["dep:arbitrary"]
benchmark = []
external_commit = []
external_proposal = []
std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std", "thiserror/std", "indexmap"]
rfc_compliant = ["external_commit"]

[dependencies]
async-trait = "0.1.61"
aws-mls-codec = { version = "*", path = "./aws-mls-codec", default-features = false}
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive", "serde"] }
arbitrary = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "2.3.1", default-features = false, features = ["alloc", "macros"]}
base64 = { version = "0.20.0", default-features = false, features = ["alloc"]}
thiserror = { package = "thiserror-core", version = "1", default-features = false }
enum-iterator = "1.1.3"
num_enum = { version = "0.5", default-features = false}
indexmap = { version = "1.8.0", features = ["serde"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.26", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.79" }
