[package]
name = "aws-mls-core"
version = "0.9.0"
edition = "2021"

[features]
default = ["std", "rfc_compliant", "fast_serialize"]
arbitrary = ["std", "dep:arbitrary"]
benchmark = []
external_commit = []
external_proposal = []
fast_serialize = ["aws-mls-codec/preallocate"]
std = ["aws-mls-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexmap/std", "dep:thiserror", "indexmap"]
rfc_compliant = ["external_commit", "x509"]
ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
x509 = []

[dependencies]
async-trait = "0.1.61"
aws-mls-codec = { version = "*", path = "../aws-mls-codec", default-features = false}
zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
arbitrary = { version = "1", features = ["derive"], optional = true }
base64 = { version = "0.20.0", default-features = false, features = ["alloc"]}
thiserror = { version = "1.0.40", optional = true }
enum-iterator = "1.1.3"
num_enum = { version = "0.5", default-features = false}
indexmap = { version = "1.8.0", optional = true }
safer-ffi = { version = "0.0.10", default-features = false, features = ["alloc"], optional = true }
safer-ffi-gen = { version = "=0.1.0-rc.3", default-features = false, optional = true }
maybe-async = "0.2.7"

[dev-dependencies]
assert_matches = "1.5.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.26", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.79" }
