[package]
name = "aws-mls-crypto-awslc"
version = "0.4.0"
edition = "2021"

[dependencies]
aws-lc-rs = "1.3"
aws-lc-sys = { version = "0.10.0", features = ["bindgen"] }
aws-mls-core = { path = "../aws-mls-core", version = "*" }
aws-mls-crypto-hpke = { path = "../aws-mls-crypto-hpke", version = "*" }
aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
thiserror = "1.0.40"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
aws-mls-core = { path = "../aws-mls-core", version = "*", features = ["test_suite"] }
