[package]
name = "aws-mls-crypto-awslc"
version = "0.6.0"
edition = "2021"

[dependencies]
aws-lc-rs = "1.3"
aws-lc-sys = { version = "0.10.0", features = ["bindgen"] }
aws-mls-core = { path = "../aws-mls-core", version = "*" }
aws-mls-crypto-hpke = { path = "../aws-mls-crypto-hpke", version = "*" }
aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", version = "*" }
thiserror = "1.0.40"
zeroize = { version = "1", features = ["zeroize_derive"] }
maybe-async = "0.2.7"

[dev-dependencies]
aws-mls-core = { path = "../aws-mls-core", version = "*", features = ["test_suite"] }
futures-test = "0.3.25"

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"
