[package]
name = "aws-mls-crypto-hpke"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
openssl = { version = "^0.10.40" }
aws-mls-core = { path = "../aws-mls-core" }
aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits" }
thiserror = "^1"
zeroize = { version = "^1.3", features = ["zeroize_derive"] }
hex = { version = "^0.4.3", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
assert_matches = "1.5.0"
mockall = "0.11"
aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl" }
aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", features = ["mock"] }