[package]
name = "aws-mls-crypto-hpke"
version = "0.3.0"
edition = "2021"

[features]
default = ["std"]
std = ["aws-mls-core/std", "aws-mls-crypto-traits/std", "dep:thiserror", "zeroize/std"]

[dependencies]
aws-mls-core = { path = "../aws-mls-core", default-features = false, version = "*" }
aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", default-features = false, version = "*" }
thiserror = { version = "1.0.40", optional = true }
zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
cfg-if = "^1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
assert_matches = "1.5.0"
mockall = "0.11"
hex = { version = "^0.4.3", features = ["serde"] }
aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", features = ["mock"], version = "*" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", version = "*"}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.26", default-features = false }
aws-mls-crypto-rustcrypto = { path = "../aws-mls-crypto-rustcrypto", version = "*"}
getrandom = { version = "0.2", features = ["js"] }
