[package]
name = "aws-mls-crypto-openssl"
version = "0.1.0"
edition = "2021"

[features]
x509 = ["aws-mls-identity-x509"]
default = ["x509"]

[dependencies]
openssl = { version = "^0.10.40" }
aws-mls-core = { path = "../aws-mls-core" }
aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", optional = true }
thiserror = "^1"

[dev-dependencies]
hex = { version = "^0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
assert_matches = "1.5.0"
