[package]
name = "aws-mls-crypto-openssl"
version = "0.5.0"
edition = "2021"

[features]
x509 = ["aws-mls-identity-x509"]
default = ["x509"]

[dependencies]
openssl = { version = "^0.10.40" }
aws-mls-core = { path = "../aws-mls-core", version = "*" }
aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", optional = true, version = "*" }
aws-mls-crypto-hpke = { path = "../aws-mls-crypto-hpke", version = "*" }
aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
thiserror = "1.0.40"
enum-iterator = "1.1.2"
zeroize = { version = "1", features = ["zeroize_derive"] }
maybe-async = "0.2.7"

[dev-dependencies]
hex = { version = "^0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
assert_matches = "1.5.0"
aws-mls-core = { path = "../aws-mls-core", version = "*", features = ["test_suite"] }

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"
