[package]
name = "aws-mls-crypto-traits"
version = "0.3.0"
edition = "2021"

[features]
mock = ["std", "dep:mockall"]
std = ["aws-mls-core/std"]
default = ["std"]

[dependencies]
aws-mls-core = { path = "../aws-mls-core", version = "*", default-features = false }
mockall = { version = "^0.11", optional = true }
