[package]
name = "aws-mls-identity-x509"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-mls-core = { path = "../aws-mls-core" }
thiserror = "1"

[dev-dependencies]
mockall = "0.11"
assert_matches = "1"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.26", default-features = false }
getrandom = { version = "0.2", features = ["js"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.79" }
