[package]
name = "aws-mls-provider-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-mls = { path = "../aws-mls", version = "*" }
aws-mls-core = { path = "../aws-mls-core", version = "*" }
thiserror = "^1"
uuid = { version = "1.1", features = ["v4"] }
wasm-bindgen = { version = "^0.2.79", optional = true }
zeroize = { version = "^1.3", features = ["zeroize_derive"] }
bincode = "1"
rusqlite = { version = "0.28", default-features = false, optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
async-trait = "0.1.61"
rand = "0.8"
hex = { version = "^0.4.3" }
openssl = "0.10.45"
bip39 = { version = "^1.0.1" }


[dev-dependencies]
tempfile = "3"
assert_matches = "1"
anyhow = "1"

[features]
all-languages = ["bip39/all-languages"]
default = ["sqlcipher-bundled"]


sqlite = ["rusqlite/modern_sqlite"]
sqlite-bundled = ["sqlite", "rusqlite/bundled"]
sqlcipher = ["sqlite", "rusqlite/sqlcipher"]
sqlcipher-bundled = ["sqlite", "rusqlite/bundled-sqlcipher"]
