[package]
name = "aws-mls-provider-sqlite"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-mls-core = { path = "../aws-mls-core", version = "*" }
thiserror = "1.0.40"
uuid = { version = "1.1", features = ["v4"] }
wasm-bindgen = { version = "0.2", optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }
rusqlite = { version = "0.28", default-features = false }
async-trait = "0.1"
rand = "0.8"
hex = { version = "0.4" }
openssl = "0.10"

[dev-dependencies]
tempfile = "3"
assert_matches = "1"
anyhow = "1"

[features]
default = ["sqlcipher-bundled"]

sqlite = ["rusqlite/modern_sqlite"]
sqlite-bundled = ["sqlite", "rusqlite/bundled"]
sqlcipher = ["sqlite", "rusqlite/sqlcipher"]
sqlcipher-bundled = ["sqlite", "rusqlite/bundled-sqlcipher"]
