[package]
name = "aws-mls"
version = "0.16.0"
authors = ["Tom Leavy <tom@wickr.com>"]
edition = "2021"

[features]
benchmark = ["serde_json", "aws-mls-crypto-openssl"]
default = ["rayon"]
arbitrary = ["dep:arbitrary", "aws-mls-core/arbitrary"]
rayon = ["dep:rayon"]

[dependencies]
async-trait = "0.1.61"
aws-mls-core = { path = "../aws-mls-core" }
thiserror = "^1"
tls_codec = "0.2.0"
tls_codec_derive = "0.2.0"
hex = { version = "^0.4.3", features = ["serde"] }
enum-iterator = "1.1.3"
futures = "0.3.25"
indexmap = { version = "1.8.0", features = ["serde"] }
itertools = "0.10.3"
der = { version = "^0.6.0", features = ["alloc"]}
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
zeroize = { version = "^1.3", features = ["zeroize_derive"] }
debug_tree = "0.4.0"
arbitrary = { version = "1", features = ["derive"], optional = true }
# TODO: https://github.com/GoogleChromeLabs/wasm-bindgen-rayon
rayon = { version = "1", optional = true }
base64 = "0.13.0"
num_enum = "0.5"
cfg-if = "^1"
serde_with = "^2"
bincode = "1"
aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
criterion = { version = "0.3.5", features = ["async_futures", "html_reports"] }
futures-test = "0.3.25"
serde_json = "^1.0"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.79" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.26", default-features = false }
aws-mls-crypto-rustcrypto = { path = "../aws-mls-crypto-rustcrypto", features = ["browser"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl"}


[[bench]]
name = "encap"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "decap"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "group_serialize"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "group_commit"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "group_application"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "secret_tree_serialize"
harness = false
required-features = ["benchmark"]
