[package]
name = "mls-rs-core"
version = "0.17.1"
edition = "2021"
description = "Core components and traits for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs"]
license = "Apache-2.0 OR MIT"
exclude = ["test_data"]


[features]
default = ["std", "rfc_compliant", "fast_serialize"]
arbitrary = ["std", "dep:arbitrary"]
fast_serialize = ["mls-rs-codec/preallocate"]
std = ["mls-rs-codec/std", "zeroize/std", "safer-ffi-gen?/std", "dep:thiserror", "serde?/std"]
rfc_compliant = ["x509"]
ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
x509 = []
test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
serde = ["dep:serde", "zeroize/serde"]
hex_serde = ["serde", "dep:hex"]

[dependencies]
mls-rs-codec = { version = "0.5.0", path = "../mls-rs-codec", default-features = false}
zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
arbitrary = { version = "1", features = ["derive"], optional = true }
thiserror = { version = "1.0.40", optional = true }
safer-ffi = { version = "0.1.3", default-features = false, optional = true }
safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
maybe-async = "0.2.7"

serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = { version = "^1.0", optional = true }
hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
itertools = { version = "0.12", optional = true }

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"

[dev-dependencies]
assert_matches = "1.5.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.26", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.79" }
